# homelab

./: .gitignore  LICENSE  README.md
caddy-alog-clickhouse-sink/: Cargo.toml
caddy-alog-clickhouse-sink/src/: app_state.rs  config.rs  handlers.rs  log.rs  main.rs
caddy-alog-clickhouse-sink/src/log/: db.rs
computations/: ice_cooling.nbt
doorstep-admin/: Cargo.toml  README.md
doorstep-admin/src/: config.rs  controllers.rs  error.rs  image.rs  main.rs  middlewares.rs  routes.rs  state.rs
doorstep-admin/src/routes/: admin.rs
doorstep-admin/src/state/: background.rs  init.rs
doorstep-admin/static/css/: main.css
doorstep-admin/static/js/: controllers.js  main.js
doorstep-admin/static/js/controllers/: background-canvas.js  background-preview.js  previous-background.js
