[package]
name = "caddy-alog-clickhouse-sink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bb8 = "0.8.3"
derive-getters = "0.3.0"
dotenvy = "0.15.7"
envy = "0.4.2"
eyre = "0.6.12"
futures = "0.3.30"
klickhouse = { version = "0.12.0", features = ["bb8", "time", "tls"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "parking_lot",
    "env-filter",
] }
tracing-tree = "0.3.0"
uuid = { version = "1.8.0", features = ["v7"] }
